add new website from server na

--- a/xem-phim-bo/toi-tu-bo-tu-cach-la-mot-anh-hung/index.html
+++ b/xem-phim-bo/toi-tu-bo-tu-cach-la-mot-anh-hung/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1669,21 +1669,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-my-goc-hoa" title="Người Mỹ Gốc Hoa">
+          <a class="list-top-movie-link" href="/phim-moi/sparks" title="Sparks">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/american-born-chinese-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sparks-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Mỹ Gốc Hoa
+             Sparks
             </span>
             <span class="list-top-movie-item-en">
-             American Born Chinese
+             Sparks
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1691,62 +1691,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/neu-nhu-sau-con-mua" title="Nếu Như Sau Cơn Mưa">
+          <a class="list-top-movie-link" href="/phim-moi/co-gai-thien-tinh-phan-3" title="Cô Gái Thiên Tinh (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-nhu-sau-con-mua-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-thien-tinh-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nếu Như Sau Cơn Mưa
+             Cô Gái Thiên Tinh (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             【Ha-neul Kang】Waiting For Rain
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-cua-pi" title="Cuộc Đời Của Pi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-cua-pi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Đời Của Pi
-            </span>
-            <span class="list-top-movie-item-en">
-             Life of Pi
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/crisis-doi-dieu-tra-co-dong-dac-biet" title="Crisis: Đội điều tra cơ động đặc biệt">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/crisis-doi-dieu-tra-co-dong-dac-biet-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Crisis: Đội điều tra cơ động đặc biệt
-            </span>
-            <span class="list-top-movie-item-en">
-             Crisis: Special Security Squad
+             DC's Stargirl (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1757,18 +1713,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huan-luyen-em-dau" title="Huấn Luyện Em Dâu">
+          <a class="list-top-movie-link" href="/phim-moi/ke-dao-tau-giac-mo" title="Kẻ Đào Tẩu Giấc Mơ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huan-luyen-em-dau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-dao-tau-giac-mo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Huấn Luyện Em Dâu
+             Kẻ Đào Tẩu Giấc Mơ
             </span>
             <span class="list-top-movie-item-en">
-             Taming The Dodo
+             Coma
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/biet-doi-giai-cuu-rong-le-hoi-o-huttsgalor" title="Biệt đội giải cứu rồng: Lễ hội ở Huttsgalor">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-giai-cuu-rong-le-hoi-o-huttsgalor-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Biệt đội giải cứu rồng: Lễ hội ở Huttsgalor
+            </span>
+            <span class="list-top-movie-item-en">
+             Dragons: Rescue Riders: Huttsgalor Holiday
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/a-mob-story" title="A Mob Story">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-mob-story-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             A Mob Story
+            </span>
+            <span class="list-top-movie-item-en">
+             A Mob Story
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
